# Dynamo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_spectra.conf
.github/workflows/: draft-pdf.yml
Dynamo/: cgs_consts.py  classical_analysis.py  create_data.py  imf.py  nbspectra.py  phoenix.py  planet_params.py  rotator.py  spectra.py  spots.py  star.conf  star.py  starsim.conf  vizualisation.py
Dynamo/__pycache__/: nbspectra.generate_grid_coordinates_nb-449.py310.1.nbc
JOSS/: paper.bib  paper.md
Nujum/: noise.py  spots.py  star.py  stellar_interpolator.py
Nujum/__pycache__/: nbspectra.generate_grid_coordinates_nb-449.py310.nbi  nbspectra.loop_generate_rotating_lc_nb-741.py310.1.nbc  nbspectra.loop_generate_rotating_lc_nb-741.py310.nbi
dataset/: create_data.py
dataset/configs/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
dataset/lamost/: 3.pqt  8.pqt  9.pqt
dataset/lc/: 0.pqt  1.pqt  2.pqt  3.pqt  4.pqt  5.pqt  6.pqt  7.pqt  8.pqt  9.pqt
dataset/spots/: 0.pqt  1.pqt  2.pqt  3.pqt  4.pqt  5.pqt  6.pqt  7.pqt  8.pqt  9.pqt
examples/: create_data.py  planet_params.py
tests/: check_flux_consistency.py  generate_example_plot.py  test_epoch_spectra.py  test_multi_photometry.py  test_multi_planet.py  test_observables_viz.py  test_per_instr_epochs.py  test_period_recovery_suite.py  test_rm_effect.py  test_spectra.py
