[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Dynamo"
version = "0.1.0"
description = "simulated stellar photometry and spectroscopy"
authors = [{ name = "Ilay Kamai", email = "ilay.kamai@campus.technion.ac.il" }]
license = {text = "MIT"}
readme = "README.md"  # if you have one, otherwise remove this line
requires-python = ">=3.8"
dynamic = []
dependencies = [
    "numpy==2.2.3",
    "pandas==2.2.3",
    "matplotlib==3.10.1",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "tqdm==4.66.4",
    "astropy==6.1.2",
    "numba>=0.60.0",
    "emcee==3.0rc2",
    "kiauhoku==2.0.0",
    "starsim==2.3.1"
]

[project.urls]
Homepage = "https://github.com/IlayMalinyak/dynamo"

[tool.setuptools]
packages = ["Dynamo"]