[build-system]
requires = ["hatchling<1.22"]
build-backend = "hatchling.build"

[project]
name = "Dynamo"
version = "0.1.0"
description = "simulated stellar photometry and spectroscopy"
authors = [{ name = "Ilay Kamai", email = "ilay.kamai@campus.technion.ac.il" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "seaborn>=0.13",
    "tqdm>=4.60",
    "astropy>=6.0",
    "numba>=0.60",
    "emcee>=3.0",
    "kiauhoku>=2.0",
]

[project.urls]
Homepage = "https://github.com/IlayMalinyak/Dynamo"

[project.scripts]
dynamo-sim = "Dynamo.create_data:main"

[tool.hatch.build.targets.wheel]
packages = ["Dynamo"]

[tool.hatch.build.targets.wheel.force-include]
"Dynamo/star.conf" = "Dynamo/star.conf"
"Dynamo/spotmap.dat" = "Dynamo/spotmap.dat"